# instructions

./: .dockerignore  .env.template  .gitignore  .gitingore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
documents/: manage.py
documents/docs_base/: db.sqlite3
documents/documents/: asgi.py  settings.py  urls.py  wsgi.py
documents/fixtures/: dump_base.json
documents/import_file/json/: Brand-2024-10-07.json  Device-2024-10-07.json  Device-2024-10-14.json  Network-2024-10-07.json  Project-2024-10-07.json  Settings-2024-10-07.json  WaveSensor-2024-10-07.json  WaveSensor-2024-10-15.json
documents/instruction/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
documents/instruction/migrations/: 0001_initial.py  0002_rename_device_id_device_network_id_file_created_at_and_more.py  0003_rename_prject_project_project.py  0004_instructionfile_created_at_instructionfile_docs_and_more.py  0005_remove_file_description_file_file_configs_and_more.py  0006_remove_file_name.py  0007_device_designation_alter_device_name.py  0008_wavesensor.py  0009_device_serial_num_device_termodate_and_more.py  0010_remove_project_device_id_project_device_id.py  0011_remove_project_device_id_device_project_id.py  0012_project_archive.py  0013_instructionfile_brand_id_and_more.py  0014_brand_icon.py  (+13 more)
documents/manuals/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
documents/users/: forms.py  urls.py  views.py
documents/utils/: format_name_uer.py  log_config.py  slugify.py
(+35 files in other folders)
