[tool.poetry]
name = "instructions"
version = "0.1.0"
description = ""
authors = ["Viktor <vm-viktor@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pillow = "10.2.0"
django-imagekit = "5.0.0"
python-dotenv = "1.0.0"
django-filter = "23.5"
markupsafe = "2.1.3"
click = "8.1.7"
django-mptt = "^0.16.0"
django-mptt-admin = "^2.6.1"
django-import-export = "^3.3.6"
celery = "^5.4.0"
rabbitmq = "^0.2.0"
flake8 = "^7.0.0"
gunicorn = "^23.0.0"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
